--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .toplogo {
-    width: 60px;
+    width: 80px;
 }
 
 .info {
@@ -84,32 +84,50 @@ body {
 }
 
 .box {
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    margin-bottom: 20px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 10px 24px;
 }
 
 .hero {
     background-image: url('../images/hero.svg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
     height: 700px;
     position: relative;
     overflow: hidden;
+    background-color: #FFF2ED;
+    padding-bottom: 10px;
 }
 
 .hero-txt {
     position: absolute;
     width: 30%;
     top: 100px;
-    left: 200px
+    left: 350px
 }
 
 #quote1 {
     padding: 15px 30px;
 }
 
+#contact {
+    background-color: #f2f2f2;
+    padding: 20px;
+    color: #33475b;
+}
+
 .title {
     text-align: center;
     margin: 20px;
+}
+
+#footer {
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer a {
+    text-decoration: none;
+    color: #ff7a5a;
 }
