--- a/public/css/main.css
+++ b/public/css/main.css
@@ -442,7 +442,7 @@ textarea.input100 {
     min-width: 200px;
     height: 50px;
     border-radius: 5px;
-    background: #ff7a5a;
+    background: #1571EC;
     font-family: Montserrat-Bold;
     font-size: 12px;
     color: #fff;
