--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,9 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 20px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .5);
+    z-index: 10000;
+    border: none;
 }
 
 .service img {
